// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css createStyil 1`] = `
<html>
  <head />
  <body>
    <style
      data-styils="abc"
      nonce="123456"
    >
      
      .css-2883881200{width:auto;}
    </style>
  </body>
</html>
`;

exports[`css createStyil speedy 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
    </style>
  </head>
  <body>
    <style
      data-styils="abc"
      nonce="123456"
    >
      
      .css-2883881200{width:auto;}
    </style>
  </body>
</html>
`;
